--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "d3": "^7.9.0",
+    "dayjs": "^1.11.12",
     "formik": "^2.4.6",
     "next": "13.5.6",
     "notification": "^0.0.6",
