--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/x-data-grid": "^7.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.12",
     "formik": "^2.4.6",
@@ -24,6 +25,7 @@
     "notification": "^0.0.6",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
