--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
